# claudealytics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: SCREENSHOTS.md  demo.tape
src/claude_insights/: cli.py
src/claude_insights/analytics/: config_analyzer.py  cost_calculator.py  data_merger.py  optimization_analyzer.py
src/claude_insights/analytics/aggregators/: session_aggregator.py  token_aggregator.py  usage_aggregator.py
src/claude_insights/analytics/parsers/: conversation_enricher.py  conversation_parser.py  execution_log_parser.py  stats_cache_parser.py  token_miner.py
src/claude_insights/dashboard/: app.py
src/claude_insights/dashboard/layouts/: agents_skills.py  config_health.py  costs.py  optimization.py  overview.py  sessions.py  token_usage.py
src/claude_insights/models/: schemas.py
src/claude_insights/scanner/: agent_scanner.py  claude_md_scanner.py  config_size_scanner.py  cross_reference.py  report_generator.py  skill_scanner.py  tool_version_scanner.py
src/claudealytics/: _version.py  cli.py
src/claudealytics/analytics/: cache_analyzer.py  config_analyzer.py  cost_calculator.py  data_merger.py  optimization_analyzer.py  profile_exporter.py  report_generator.py  report_verifier.py
src/claudealytics/analytics/aggregators/: behavior_aggregator.py  context_aggregator.py  edit_semantics_aggregator.py  error_aggregator.py  file_activity_aggregator.py  flow_aggregator.py  health_score_aggregator.py  intervention_aggregator.py  library_aggregator.py  llm_meta_analyzer.py  llm_profile_scorer.py  loop_aggregator.py  profile_scorer.py  research_aggregator.py  session_aggregator.py  stack_aggregator.py  testing_aggregator.py  token_aggregator.py  usage_aggregator.py
src/claudealytics/analytics/parsers/: content_miner.py  conversation_enricher.py  conversation_parser.py  execution_log_parser.py  instruction_extractor.py  message_sampler.py  stats_cache_parser.py  token_miner.py
src/claudealytics/dashboard/: app.py
src/claudealytics/dashboard/layouts/: agents_skills.py  cache_analysis.py  config_health.py  context_overhead.py  conversation_analysis.py  conversation_profile.py  costs.py  optimization.py  overview.py  (+3 more)
src/claudealytics/models/: schemas.py
src/claudealytics/scanner/: agent_scanner.py  claude_md_scanner.py  config_size_scanner.py  cross_reference.py  report_generator.py  skill_scanner.py  tool_version_scanner.py
tests/: conftest.py  test_content_miner_classification.py  test_empty_plots.py  test_gating.py  test_profile_scorer.py
tests/integration/: test_publish_flow.py  test_publish_flow.sh
